# Artificial-Culture-Rust-

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: rust.yml
.qoder/quests/: environment-builder.md
Docs/: component_builder_system.md  normalized_type_guide.md  performance_monitoring_research.md  utils_migration_guide.md
Docs/Backstory/: DETAILED_ROADMAP.md  components.md  entities.md  interaction_flows.md  neurological.md  old_roadmap.md  sociological.md
Docs/Flows/: fuzzy_weighting_flows(UNFINISHED).md  interaction_flows.md  roadmap.md
Docs/Fundaments/: Artificial Society_ Complete Technical and Philosophical Specification.md  DETAILED_ROADMAP.md  Roadmap from Spec.md  Tech Paper Spec.md  neurological.md  psychological.md  sociological.md
Docs/Structures/: README_PERFORMANCE_MONITORING.md  components.md  ecs_architecture.md  entities.md  granular_ecs(UNFINISHED).md  normalized_type_guide.md  systems.md
src/: components.rs  lib.rs  main.rs  types.rs
src/ai/: mod.rs
src/components/: components_constants.rs  components_default.rs  components_environment.rs  components_knowledge.rs  components_needs.rs  components_npc.rs  default.rs  mod.rs  needs.rs  npc.rs  pathfinding.rs  resources.rs
src/core/: builders.rs  constants.rs  entities.rs  mod.rs  spawning.rs  types.rs  utils.rs
src/entity_builders/: entity_builders_default.rs  entity_builders_environment.rs  entity_builders_npc.rs  environment.rs  environmental_builder_implementations.rs  environmental_entity_domains.rs  generic_type_safe_builder.rs  mod.rs  npc.rs  npc_builder_implementations.rs  npc_entity_domain.rs
src/presentation/: mod.rs  (+5 more)
tests/: comprehensive_tests.rs  integration_tests.rs
(+82 files in other folders)
