[package]
name = "Artificial-Culture-Rust-"
version = "0.1.0"
edition = "2024"
license = "CC-BY-NC-SA-4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "^0.9.2"
bevy = { version = "^0.16.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.32.0"
bevy_rapier2d = "0.30.0"
iyes_perf_ui = "0.5.0"
